Updating people box height so profile pictures have better alignment, Updating alignment to prevent overflow

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_alignment.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_alignment.scss
@@ -8,7 +8,7 @@
 	margin-right: -50vw;
 	margin-left: -50vw;
 	width: 100vw;
-	max-width: 100vw;
+	max-width: 100%;
 }
 
 // Experimental: Fixing WordPress group issues #33374.
