--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_global.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_global.scss
@@ -2,6 +2,7 @@ html {
 	visibility: visible !important;
 	// Controls anchor link padding.
 	scroll-padding-top: 120px;
+	max-width: 100%;
 }
 
 body {
